samples/_failures_safe/1761455314_b84341_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0d1db4b.c: In function ‘main’:
./samples/SAFE/__tmp_a0d1db4b.c:122:12: error: missing terminating " character
  122 |     printf("Matrix Operations
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a0d1db4b.c:122:5: error: expected expression at end of input
  122 |     printf("Matrix Operations
      |     ^~~~~~
./samples/SAFE/__tmp_a0d1db4b.c:122:5: error: expected declaration or statement at end of input
